--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     overflow-x: hidden; /* Prevenir el desplazamiento horizontal */
     overflow-y: auto; /* Permitir desplazamiento vertical */
     height: 100%;
-    max-width: 100%;
+    width: 100%;
 }
 
 /* Fondo con un corazón negro detrás */
@@ -148,6 +148,7 @@ body {
     animation: fadeIn 1s ease-in-out;
     max-width: 90%; /* Ajuste el ancho máximo para pantallas pequeñas */
     overflow-y: auto; /* Permitir desplazamiento si el contenido es largo */
+    max-height: 80%; /* Evitar que el contenedor sea demasiado grande */
 }
 
 @keyframes fadeIn {
@@ -157,7 +158,7 @@ body {
 
 /* Título */
 h1 {
-    font-size: 40px;
+    font-size: 35px;
     color: red;
     margin-bottom: 20px;
     animation: bounce 2s ease-in-out infinite;
@@ -171,7 +172,7 @@ h1 {
 
 /* Párrafo */
 p {
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 30px;
     color: white;
     animation: fadeInText 2s ease-in-out;
