--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ body {
 
 /* Título */
 h1 {
-    font-size: 35px;
+    font-size: 30px;
     color: red;
     margin-bottom: 20px;
     animation: bounce 2s ease-in-out infinite;
@@ -223,4 +223,25 @@ p {
     text-align: center;
     max-width: 90%; /* Ajusta el ancho máximo */
     overflow-y: auto; /* Permite desplazamiento en el popup si es necesario */
+}
+
+/* Estilo responsivo para pantallas pequeñas */
+@media (max-width: 600px) {
+    .message-container {
+        padding: 20px;
+        max-width: 95%; /* Ancho del contenedor ajustado en móviles */
+    }
+
+    .button {
+        padding: 12px 25px;
+        font-size: 16px;
+    }
+
+    h1 {
+        font-size: 25px;
+    }
+
+    p {
+        font-size: 14px;
+    }
 }
